added head and footer

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   </head>
   <body>
     <div class="container">
+      <h1>
+        Covid tracker, Data for
+        <b style="border-bottom: 4px solid #000;">India</b>
+      </h1>
       <div class="row">
         <div class="four columns">
           <div class="card card--red">
@@ -33,6 +37,11 @@
           </div>
         </div>
       </div>
+      <footer>
+        API details: https://github.com/covid19india/api
+        <br />
+        Author: <a href="https://github.com/bhansa">bhansa</a>
+      </footer>
     </div>
     <script src="main.js" async></script>
     <script>
