added meta tags

--- a/index.html
+++ b/index.html
@@ -1,8 +1,34 @@
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Covid data tracker</title>
+    <meta name="title" content="Covid tracker, Data for India" />
+    <meta
+      name="description"
+      content="See live covid data for india, confirmed, active and recovered cases"
+    />
+    <meta name="author" value="bhansa" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://covidtrackerlite.in/" />
+    <meta property="og:title" content="Covid tracker, Data for India" />
+    <meta
+      property="og:description"
+      content="See live covid data for india, confirmed, active and recovered cases"
+    />
+    <meta property="og:image" content="" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://covidtrackerlite.in/" />
+    <meta property="twitter:title" content="Covid tracker, Data for India" />
+    <meta
+      property="twitter:description"
+      content="See live covid data for india, confirmed, active and recovered cases"
+    />
+    <meta property="twitter:image" content="" />
+    <title>Covid data tracker | Data for India</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
