--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
       content="See live covid data for india, confirmed, active and recovered cases"
     />
     <meta name="author" value="bhansa" />
+    <meta name="theme-color" content="#000" />
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://covidtrackerlite.in/" />
