removed defer keyword

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </footer>
     </div>
     <script src="main.js" async></script>
-    <script src="theme-toggle.js" async defer></script>
+    <script src="theme-toggle.js" async></script>
     <script>
       if ("serviceWorker" in navigator) {
         navigator.serviceWorker.register("/sw.js").then(function () {
