--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
     />
-    <link rel="stylesheet" href="main.css" />
+    <link rel="stylesheet" href="/main.css" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -91,8 +91,8 @@
         Author: <a href="https://github.com/bhansa">bhansa</a>
       </footer>
     </div>
-    <script src="main.js" async></script>
-    <script src="theme-toggle.js" async></script>
+    <script src="/main.js" async></script>
+    <script src="/theme-toggle.js" async></script>
     <script>
       if ("serviceWorker" in navigator) {
         navigator.serviceWorker.register("/sw.js").then(function () {
