--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
         Author: <a href="https://github.com/bhansa">bhansa</a>
       </footer>
     </div>
-    <script src="/main.js" async></script>
-    <script src="/theme-toggle.js" async></script>
+    <script src="/main.js"></script>
+    <script src="/theme-toggle.js"></script>
     <script>
       if ("serviceWorker" in navigator) {
         navigator.serviceWorker.register("/sw.js").then(function () {
