added radio style for toggle

--- a/index.html
+++ b/index.html
@@ -55,8 +55,10 @@
     <div class="theme-switch-wrapper">
       <label class="theme-switch" for="theme-toggle">
         <input type="checkbox" id="theme-toggle" />
-        <em>Enable Dark Mode</em>
+        <div class="slider round"></div>
       </label>
+      &nbsp;
+      <em>Enable Dark Mode</em>
     </div>
     <div class="container">
       <h1>
