removed inline style

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="container">
       <h1>
         Covid tracker, Data for
-        <b style="border-bottom: 4px solid #000;">India</b>
+        <b class="strong">India</b>
       </h1>
       <div class="row">
         <div class="four columns">
