added reference in footer

--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@
         </div>
       </div>
       <footer>
-        API details: https://github.com/covid19india/api
+        API details: https://github.com/covid19india/api &nbsp; | &nbsp;
+        Reference:
+        <a href="https://www.covid19india.org/" target="_blank" rel="noopener"
+          >covid19india.org</a
+        >
         <br />
         Author: <a href="https://github.com/bhansa">bhansa</a>
       </footer>
