perf changes, fixing lighthouse issues

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE >
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -36,6 +36,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
     />
     <link rel="stylesheet" href="/main.css" />
+    <link rel="preconnect" href="https://api.covid19india.org" />
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
@@ -88,7 +90,8 @@
         </div>
       </div>
       <footer>
-        API details: https://github.com/covid19india/api &nbsp; | &nbsp;
+        API details: https://github.com/covid19india/api
+        <br />
         Reference:
         <a href="https://www.covid19india.org/" target="_blank" rel="noopener"
           >covid19india.org</a
