perf changes, added crossorigin

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css"
     />
     <link rel="stylesheet" href="/main.css" />
-    <link rel="preconnect" href="https://api.covid19india.org" />
+    <link rel="preconnect" href="https://api.covid19india.org" crossorigin="crossorigin"/>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
