--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
           >covid19india.org</a
         >
         <br />
-        Author: <a href="https://github.com/bhansa">bhansa</a>
+        Source code or File issues here: <a href="https://github.com/bhansa/covid-tracker-lite" target="_blank" rel="noopener">bhansa</a>
       </footer>
     </div>
     <script src="/main.js"></script>
